src/test/ui/type_length_limit.stderr
error: reached the type-length limit while instantiating `take::<std::option::Option<(((((... G), (G, G, G), (G, G, G))))))>>`
  --> $DIR/type_length_limit.rs:25:1
   |
LL | fn take<T>(x: T) {}
   | ^^^^^^^^^^^^^^^^^^^
   |
   = note: consider adding a `#![type_length_limit="1094"]` attribute to your crate

error: aborting due to previous error

